Closed Bug 1902250 Opened 4 months ago Closed 4 months ago

Fix move-to-rect popup alignment of un-anchored popups on RTL.

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox129 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

This matches the non-wayland codepath, and fixes the position of nested
bookmark menus when they're positioned by move-to-rect.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/929138828f91 Fix move-to-rect popup alignment of un-anchored popups on RTL. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: