Bug 1902250 - Fix move-to-rect popup alignment of un-anchored popups on RTL. r=stransky

This matches the non-wayland codepath, and fixes the position of nested
bookmark menus when they're positioned by move-to-rect.

Differential Revision: https://phabricator.services.mozilla.com/D213554